==> HazemBenAmmar/ESP32_Display_development_board/3.5/3.5inch_SPI_Module_ILI9488/1-Demo/Demo_STM32/Demo_STM32F103VCT6_Hardware_SPI-capacitive touch/HARDWARE/TOUCH/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "delay.h"
#include "stdlib.h"
#include "math.h"
#include "flash.h"
#include "Touch_I2C.h"

u8 TP_Init(void)
{	   
	//注意,时钟使能之后,对GPIO的操作才有效
	//所以上拉之前,必须使能时钟.才能实现真正的上拉输出 
	GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC,ENABLE);
	//CS  SCLK MOSI 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_3;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  	GPIO_Init(GPIOC, &GPIO_InitStructure);

	//MISO INT 上拉输入
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2 | GPIO_Pin_10;
  	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
  	GPIO_Init(GPIOC, &GPIO_InitStructure);

	if(lcddev.shezhi==0)
	{
		SAVE_ADDR_BASE=40;
	}else
	{
		SAVE_ADDR_BASE=0;
	}

  	TP_Read_XY(&tp_dev.x,&tp_dev.y);//第一次读取初始化	 
 	
	if(TP_Get_Adjdata())return 0;//已经校准
	else			   //未校准?
	{ 										    
	//	LCD_Clear(WHITE);//清屏
	  //  TP_Adjust();  //屏幕校准 
	//	TP_Save_Adjdata();	 
	}			
	TP_Get_Adjdata();	
	return 1; 									 
}
